adding lob confug